--- a/gold-admin-frontend/src/app/views/pages/holidays/holiday-add/holiday-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/holidays/holiday-add/holiday-add.component.html
@@ -1,5 +1,5 @@
 <div class="kt-portlet">
-    <kt-modal-header [title]="'Add Holiday'" (action)="action($event)"></kt-modal-header>
+    <kt-modal-header [title]="title" (action)="action($event)"></kt-modal-header>
     <div class="kt-portlet__body position-relative">
         <div class="text-right">
             <a href="../../../../../assets/media/files/holidays.csv" download="holidays.csv"
@@ -14,25 +14,25 @@
             <mat-tab label="By Filling From">
                 <form [formGroup]="fillingForm">
                     <div class="row kt-margin-b-15">
-                        <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory">Holiday Date</p>
+                        <div class="col-3 pl-3 form-label">
+                            <label class="text-color mandatory">Holiday Date</label>
                         </div>
                         <div class="col-9">
-                            <input type="text" class="form-control" formControlName="date" [matDatepicker]="picker"
-                                (click)="picker.open()"
-                                [class.isError]="fillingForm.get('date').touched && fillingForm.get('date').invalid"
-                                placeholder="25/12/2020">
+                            <input type="text" class="form-control" formControlName="holidayDate"
+                                [matDatepicker]="picker" (click)="picker.open()"
+                                [class.isError]="fillingForm.get('holidayDate').touched && fillingForm.get('holidayDate').invalid"
+                                placeholder="25/12/2020" (dateChange)="patchyear()">
                             <mat-datepicker #picker></mat-datepicker>
 
                         </div>
                     </div>
                     <div class="row kt-margin-b-15">
-                        <div class="col-3">
-                            <p class="text-color font-weight-bold mandatory"> Event</p>
+                        <div class="col-3 pl-3 form-label">
+                            <label class="text-color mandatory"> Event</label>
                         </div>
                         <div class="col-9">
-                            <input type="text" class="form-control" formControlName="event"
-                                [class.isError]="fillingForm.get('event').touched && fillingForm.get('event').invalid"
+                            <input type="text" class="form-control" formControlName="description"
+                                [class.isError]="fillingForm.get('description').touched && fillingForm.get('description').invalid"
                                 placeholder="Christmas">
                         </div>
                     </div>
@@ -40,12 +40,12 @@
 
                 </form>
             </mat-tab>
-            <mat-tab label="By Uploading CSV">
+            <mat-tab label="By Uploading CSV" *ngIf="!disableCsv">
                 <form [formGroup]="csvForm">
 
                     <div class="row kt-margin-t-20">
-                        <div class="col-3">
-                            <label class="text-color font-weight-bold mandatory">Upload CSV</label>
+                        <div class="col-3 pl-3 form-label">
+                            <label class="text-color mandatory">Upload CSV</label>
                         </div>
                         <div class="col-9">
                             <div class="input-group mb-3"
@@ -72,7 +72,8 @@
     </div>
     <kt-portlet-footer>
         <div class="p-3">
-            <kt-modal-footer (action)="action($event)" [value]="'Add'"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="data.action == 'add' ? 'Add': 'Update'">
+            </kt-modal-footer>
         </div>
     </kt-portlet-footer>
 
