--- a/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
@@ -2,14 +2,15 @@
     <kt-portlet-body class="">
         <div class="col-8 mx-auto parent-container">
 
-            <div class="row kt-padding-t-30 " [formGroup]="ltvGoldPercentForm">
+            <div class="row kt-padding-t-40 " [formGroup]="ltvGoldPercentForm">
                 <div class="col-8">
                     <div class="row">
-                        <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">LTV gold
+                        <div class="col-6 form-label text-color d-flex align-items-center">LTV gold
                             value(%)
                         </div>
                         <div class="col-6 per-gram d-flex align-items-center">
                             <input type="text" class="form-control" numbersOnly formControlName="ltvGoldPercent"
+                                placeholder="75%"
                                 [class.isError]="ltvGoldPercentForm.controls.ltvGoldPercent.invalid && ltvGoldPercentForm.controls.ltvGoldPercent.touched">
                             <mat-error
                                 *ngIf="ltvGoldPercentForm.controls.ltvGoldPercent.invalid && ltvGoldPercentForm.controls.ltvGoldPercent.touched">
@@ -22,15 +23,16 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-30 " [formGroup]="minimumLoanAmountForm">
+            <div class="row kt-padding-t-40 " [formGroup]="minimumLoanAmountForm">
                 <div class="col-8">
                     <div class="row">
-                        <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">Minimum
+                        <div class="col-6 form-label text-color d-flex align-items-center">Minimum
                             loan
                             amount allowed
                         </div>
                         <div class="col-6 per-gram d-flex align-items-center">
                             <input type="text" class="form-control" numbersOnly formControlName="minimumLoanAmount"
+                                placeholder="5000"
                                 [class.isError]="minimumLoanAmountForm.controls.minimumLoanAmount.invalid && minimumLoanAmountForm.controls.minimumLoanAmount.touched">
                             <mat-error
                                 *ngIf="minimumLoanAmountForm.controls.minimumLoanAmount.invalid && minimumLoanAmountForm.controls.minimumLoanAmount.touched">
@@ -43,14 +45,15 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-30 " [formGroup]="minimumTopUpAmountForm">
+            <div class="row kt-padding-t-40 " [formGroup]="minimumTopUpAmountForm">
                 <div class="col-8">
                     <div class="row">
-                        <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">Minimum
+                        <div class="col-6 form-label text-color d-flex align-items-center">Minimum
                             Top-Up Amount
                         </div>
                         <div class="col-6 per-gram d-flex align-items-center">
-                            <input type="text" class="form-control" numbersOnly formControlName="minimumTopUpAmount"
+                            <input type="text" class="form-control" formControlName="minimumTopUpAmount"
+                                placeholder="1000"
                                 [class.isError]="minimumTopUpAmountForm.controls.minimumTopUpAmount.invalid && minimumTopUpAmountForm.controls.minimumTopUpAmount.touched">
                             <mat-error
                                 *ngIf="minimumTopUpAmountForm.controls.minimumTopUpAmount.invalid && minimumTopUpAmountForm.controls.minimumTopUpAmount.touched">
@@ -63,15 +66,16 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-30 " [formGroup]="gracePeriodForm">
+            <div class="row kt-padding-t-40 " [formGroup]="gracePeriodForm">
                 <div class="col-8">
                     <div class="row">
-                        <div class="col-6 form-label text-color d-flex align-items-center" placeholder="">Grace
+                        <div class="col-6 form-label text-color d-flex align-items-center">Grace
                             Period
                             Days
                         </div>
                         <div class="col-6 per-gram d-flex align-items-center">
                             <input type="text" class="form-control" numbersOnly formControlName="gracePeriod"
+                                placeholder="12"
                                 [class.isError]="gracePeriodForm.controls.gracePeriod.invalid && gracePeriodForm.controls.gracePeriod.touched">
                             <mat-error
                                 *ngIf="gracePeriodForm.controls.gracePeriod.invalid && gracePeriodForm.controls.gracePeriod.touched">
@@ -84,13 +88,13 @@
                 </div>
             </div>
 
-            <div class="row kt-padding-t-30 kt-padding-b-30" [formGroup]="gstForm">
+            <div class="row kt-padding-t-40 kt-padding-b-30" [formGroup]="gstForm">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6 form-label text-color d-flex align-items-center">GST (%)
                         </div>
                         <div class="col-6 per-gram d-flex align-items-center">
-                            <input type="text" class="form-control" numbersOnly formControlName="gst"
+                            <input type="text" class="form-control" formControlName="gst" placeholder="8"
                                 [class.isError]="gstForm.controls.gst.invalid && gstForm.controls.gst.touched">
                             <mat-error *ngIf="gstForm.controls.gst.invalid && gstForm.controls.gst.touched">
                                 Field required</mat-error>
