--- a/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
+++ b/gold-admin-frontend/src/app/views/pages/settings/global-settings/global-settings.component.html
@@ -88,6 +88,26 @@
                 </div>
             </div>
 
+            <div class="row kt-padding-t-40 " [formGroup]="cashTransactionLimitForm">
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col-6 form-label text-color d-flex align-items-center">Cash Transaction Limit
+                        </div>
+                        <div class="col-6 per-gram d-flex align-items-center">
+                            <input type="text" class="form-control" numbersOnly formControlName="cashTransactionLimit"
+                                placeholder="5000"
+                                [class.isError]="cashTransactionLimitForm.controls.cashTransactionLimit.invalid && cashTransactionLimitForm.controls.cashTransactionLimit.touched">
+                            <mat-error
+                                *ngIf="cashTransactionLimitForm.controls.cashTransactionLimit.invalid && cashTransactionLimitForm.controls.cashTransactionLimit.touched">
+                                Field required</mat-error>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <kt-button [value]="'Save'" [type]="'submit'" (action)="submit('cashTransactionLimit')"></kt-button>
+                </div>
+            </div>
+
             <div class="row kt-padding-t-40 kt-padding-b-30" [formGroup]="gstForm">
                 <div class="col-8">
                     <div class="row">
