--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/config-details/admin-log/admin-log-list/admin-log-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/config-details/admin-log/admin-log-list/admin-log-list.component.html
@@ -47,7 +47,7 @@
 
                 <ng-container matColumnDef="adminId">
                     <mat-header-cell *matHeaderCellDef>Admin ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.id}}</mat-cell>
+                    <mat-cell *matCellDef="let element">{{element?.userId}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="email">
                     <mat-header-cell *matHeaderCellDef>Email ID</mat-header-cell>
