--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-edit/order-details-edit.component.html
@@ -49,7 +49,9 @@
                             <label class="font-weight-500 text-color">Product Name</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="productName" class="form-control" disabled>
+                            <textarea type="text" formControlName="productName" class="form-control" id="autoresizing"
+                                disabled>
+                            </textarea>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
