--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-edit/refund-details-edit.component.html
@@ -78,10 +78,18 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Cancellation Fees</label>
+                            <label class="font-weight-500 text-color">Cancellation Fees (%)</label>
                         </div>
                         <div class="col-8">
                             <input type="text" formControlName="cancelFees" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="row kt-margin-t-15">
+                        <div class="col-4 align-self-center">
+                            <label class="font-weight-500 text-color">Cancellation Charges</label>
+                        </div>
+                        <div class="col-8">
+                            <input type="text" formControlName="CancelCharge" class="form-control" disabled>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
