--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
@@ -112,7 +112,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Cancellation fees :</div>
+                    <div class="col-6 text-muted">Cancellation fees (%) :</div>
                     <div class="col-6"> {{
                         refundData?.cancelOrder?.cancelationFees
                             ? refundData?.cancelOrder?.cancelationFees
@@ -124,7 +124,7 @@
         <div class="row py-2">
             <div class="col-6">
                 <div class="row">
-                    <div class="col-6 text-muted">Total Cancellation Charges :</div>
+                    <div class="col-6 text-muted">Cancellation Charges :</div>
                     <div class="col-6"> {{
                         refundData?.cancelOrder?.cancellationCharges
                             ? refundData?.cancelOrder?.cancellationCharges
@@ -132,6 +132,18 @@
                     }}</div>
                 </div>
             </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-6 text-muted">Total Cancellation Charges :</div>
+                    <div class="col-6"> {{
+                        refundData?.cancelOrder?.totalCancelationCharges
+                            ? refundData?.cancelOrder?.totalCancelationCharges
+                             : "-"
+                    }}</div>
+                </div>
+            </div>
+        </div>
+        <div class="row py-2">
             <div class="col-6">
                 <div class="row">
                     <div class="col-6 text-muted">Cancel Date :</div>
