--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -605,6 +605,7 @@ mat-header-row {
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+	display: inline-block;
 }
 // .align-right{
 // 	justify-content: flex-end !important;
