changes in shop pagination

--- a/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shop/shop.component.html
@@ -69,7 +69,7 @@
         </div>
 
         <mat-paginator [length]="count" [pageSize]="25" [pageSizeOptions]="[5, 10, 25]"
-            (page)="pageEvent = getServerData($event)">
+            (page)="getServerData($event)">
         </mat-paginator>
     </kt-portlet-body>
 </kt-portlet>
