Changes in cart

--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/deposit-details/deposit-details-list/deposit-details-list.component.html
@@ -88,7 +88,7 @@
                 <ng-container matColumnDef="productWeight">
                     <mat-header-cell *matHeaderCellDef class="align-right">Product Weight(in gm)</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.order?.product?.weight ? element?.order?.product?.weight : '-'}}</mat-cell>
+                        {{element?.order?.weight ? element?.order?.weight : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="sku">
                     <mat-header-cell *matHeaderCellDef>SKU Code</mat-header-cell>
