--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
@@ -1,9 +1,14 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
     <kt-portlet-body>
-        <div class="row py-4">
-            <div class="col-12">
-                
+        <div class="row">
+            <div class="col-8">
+                <div class="cart-list" *ngFor="let item of cartList">
+
+                </div>
+            </div>
+            <div class="col-4">
+
             </div>
         </div>
     </kt-portlet-body>
