--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/order-details/order-details-list/order-details-list.component.html
@@ -95,7 +95,7 @@
                 <ng-container matColumnDef="weight">
                     <mat-header-cell *matHeaderCellDef class="align-right">Weight</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element['product.weight'] ? element['product.weight'] : '-'}}
+                        {{element['weight'] ? element['weight'] : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="orderTotalAmount">
