--- a/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
+++ b/gold-admin-frontend/src/app/views/pages/broker/shopping-cart/shopping-cart.component.html
@@ -1,79 +1,44 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-portlet>
     <kt-portlet-body>
-        <div class="row" *ngIf="cartList?.length;else noCartItems">
-            <div class="col-8 cart-height">
-                <div class="cart-list-item" *ngFor="let item of cartList"></div>
-                <div class="cart-list-item">
+        <div class="row" *ngIf="cartData;else noCartItems">
+            <div class="col-8 cart-height overflow-auto">
+                <div class="cart-list-item" *ngFor="let item of cartData?.allCartData">
                     <div class="row">
                         <div class="col-2 d-flex align-items-center justify-content-center">
-                            <img [src]="'assets/media/icons/image-placeholder.png'" alt="test">
+                            <img [src]="item?.product.productImage != '0' ? item?.product?.productImage: 'assets/media/icons/image-placeholder.png'"
+                                alt="test">
                         </div>
                         <div class="col-10">
                             <div class="row">
-                                <div class="col-10 font-weight-bold">Augmont 100Gm Shree Lakshmi Ganesh Silver Coin (999
-                                    Purity)</div>
-                                <div class="col-2 text-danger">Remove</div>
+                                <div class="col-10 font-weight-bold">{{item?.product?.productName}}</div>
+                                <div class="col-2 text-danger kt-pointer" (click)="removeCartItem(item?.cartId)">Remove
+                                </div>
                             </div>
                             <hr>
                             <div class="row py-1">
                                 <div class="col-3 text-muted">SKU Code</div>
-                                <div class="col-3">AU999SC100SLG</div>
+                                <div class="col-3">{{item?.product?.sku}}</div>
                                 <div class="col-2 text-muted">Price</div>
                                 <div class="col-2 text-muted">Quantity</div>
                                 <div class="col-2 text-muted">SubTotal</div>
                             </div>
                             <div class="row py-1">
                                 <div class="col-3 text-muted">Installments</div>
-                                <div class="col-3">3</div>
-                                <div class="col-2">Rs.3500</div>
-                                <div class="col-2">2</div>
-                                <div class="col-2">Rs.7000</div>
+                                <div class="col-3">{{item?.paymentTypeId != 4 ? item?.paymentType?.paymentType : 'N/A'}}
+                                </div>
+                                <div class="col-2">{{item?.finalPrice | number}}</div>
+                                <div class="col-2">{{item?.quantity}}</div>
+                                <div class="col-2">{{item?.finalPrice | number}}</div>
                             </div>
                             <div class="row py-1">
                                 <div class="col-3 text-muted">Initial Payment</div>
-                                <div class="col-3">700</div>
+                                <div class="col-3">
+                                    {{item?.paymentTypeId != 4 ? (item?.initialPayment | number) : 'N/A'}}</div>
                             </div>
-                            <div class="row py-1">
+                            <div class="row py-1" *ngIf="item?.paymentTypeId != 4">
                                 <div class="col-3 text-muted">EMI Amount</div>
-                                <div class="col-3">400</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="cart-list-item">
-                    <div class="row">
-                        <div class="col-2 d-flex align-items-center justify-content-center">
-                            <img [src]="'assets/media/icons/image-placeholder.png'" alt="test">
-                        </div>
-                        <div class="col-10">
-                            <div class="row">
-                                <div class="col-10 font-weight-bold">Augmont 100Gm Shree Lakshmi Ganesh Silver Coin (999
-                                    Purity)</div>
-                                <div class="col-2 text-danger">Remove</div>
-                            </div>
-                            <hr>
-                            <div class="row py-1">
-                                <div class="col-3 text-muted">SKU Code</div>
-                                <div class="col-3">AU999SC100SLG</div>
-                                <div class="col-2 text-muted">Price</div>
-                                <div class="col-2 text-muted">Quantity</div>
-                                <div class="col-2 text-muted">SubTotal</div>
-                            </div>
-                            <div class="row py-1">
-                                <div class="col-3 text-muted">Installments</div>
-                                <div class="col-3">3</div>
-                                <div class="col-2">Rs.3500</div>
-                                <div class="col-2">2</div>
-                                <div class="col-2">Rs.7000</div>
-                            </div>
-                            <div class="row py-1">
-                                <div class="col-3 text-muted">Initial Payment</div>
-                                <div class="col-3">700</div>
-                            </div>
-                            <div class="row py-1">
-                                <div class="col-3 text-muted">EMI Amount</div>
-                                <div class="col-3">400</div>
+                                <div class="col-3">{{item?.emiAmount | number}}</div>
                             </div>
                         </div>
                     </div>
@@ -81,31 +46,40 @@
             </div>
             <div class="col-4">
                 <div class="cart-list-item">
-                    <div class="text-center">
+                    <div *ngIf="!(cartData?.emiScheme?.length ||cartData?.emiAmount?.length)" class="text-center">
                         <div>Grand Total</div>
                         <hr>
-                        <h3 class="pt-3">Rs.35000.00</h3>
+                        <h3 class="pt-3">{{cartData?.invoicePrice | number}}</h3>
                     </div>
-                    <div>
+                    <div *ngIf="cartData?.emiScheme?.length ||cartData?.emiAmount?.length">
                         <div class="row py-2">
                             <div class="col-8 text-muted">Grand Total</div>
-                            <div class="col-4 text-right">35000</div>
+                            <div class="col-4 text-right">{{cartData?.invoicePrice | number}}</div>
                         </div>
                         <div class="row py-2">
                             <div class="col-8 text-muted">Now Payable Amount</div>
-                            <div class="col-4 text-right">700</div>
+                            <div class="col-4 text-right">{{cartData?.nowPayableAmount | number}}</div>
                         </div>
                         <div class="row py-2">
                             <div class="col-8 text-muted">Initial Amount</div>
-                            <div class="col-4 text-right">500</div>
+                            <div class="col-4 text-right">{{cartData?.initialPaymentTotal | number}}</div>
                         </div>
                         <div class="row py-2">
                             <div class="col-8 text-muted">EMI Scheme</div>
-                            <div class="col-4 text-right">3 Months</div>
+                            <div class="col-4 text-right" *ngIf="cartData?.emiScheme?.length">
+                                <span class="content" *ngFor="let scheme of cartData?.emiScheme; let isLast=last">
+                                    {{scheme}}{{isLast ? '' : ', '}}
+                                </span>
+                                <span>Months</span>
+                            </div>
                         </div>
                         <div class="row py-2">
                             <div class="col-8 text-muted">EMI Amount(Per Month)</div>
-                            <div class="col-4 text-right">900</div>
+                            <div class="col-4 text-right" *ngIf="cartData?.emiAmount?.length">
+                                <span class="content" *ngFor="let amt of cartData?.emiAmount; let isLast=last">
+                                    {{amt}}{{isLast ? '' : ', '}}
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <div class="text-center pt-3">
@@ -113,7 +87,9 @@
                     </div>
                 </div>
             </div>
-            <kt-button [value]="'Continue Shopping'" [type]="'button'" (click)="redirectToShop()"></kt-button>
+            <div class="col-12 pt-4">
+                <kt-button [value]="'Continue Shopping'" [type]="'button'" (click)="redirectToShop()"></kt-button>
+            </div>
         </div>
         <ng-template #noCartItems>
             <div class="row cart-height align-items-center">
