--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
@@ -155,6 +155,16 @@
                     }}</div>
                 </div>
             </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-6 text-muted">Amt. Payable to Customer :</div>
+                    <div class="col-6"> {{
+                        refundData?.cancelOrder?.payableToCustomer
+                            ? refundData?.cancelOrder?.payableToCustomer
+                             : "-"
+                    }}</div>
+                </div>
+            </div>
         </div>
         <div class="row py-2">
             <div class="col-6">
